Add user-tasks to workflow
