# business-cockpit/src/main/java/io/vanillabp/cockpit/bpms/api/v1/UserTaskMapper.java
@@ -1,13 +1,12 @@
 package io.vanillabp.cockpit.bpms.api.v1;
 
+import io.vanillabp.cockpit.tasklist.model.UserTask;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.MappingTarget;
 
-import io.vanillabp.cockpit.tasklist.model.UserTask;
-
 @Mapper
-public interface UserTaskMapper {
+public abstract class UserTaskMapper {
 
     @Mapping(target = "id", source = "userTaskId")
     @Mapping(target = "version", ignore = true)
@@ -15,7 +14,7 @@ public interface UserTaskMapper {
     @Mapping(target = "updatedAt", source = "timestamp")
     @Mapping(target = "updatedBy", source = "initiator")
     @Mapping(target = "endedAt", ignore = true)
-    UserTask toNewTask(UserTaskCreatedOrUpdatedEvent event);
+    public abstract UserTask toNewTask(UserTaskCreatedOrUpdatedEvent event);
     
     @Mapping(target = "id", ignore = true)
     @Mapping(target = "version", ignore = true)
@@ -23,6 +22,6 @@ public interface UserTaskMapper {
     @Mapping(target = "updatedAt", source = "timestamp")
     @Mapping(target = "updatedBy", source = "initiator")
     @Mapping(target = "endedAt", ignore = true)
-    UserTask toUpdatedTask(UserTaskCreatedOrUpdatedEvent event, @MappingTarget UserTask result);
+    public abstract UserTask toUpdatedTask(UserTaskCreatedOrUpdatedEvent event, @MappingTarget UserTask result);
     
 }
