# business-cockpit/src/main/java/io/vanillabp/cockpit/tasklist/api/v1/GuiApiMapper.java
@@ -1,48 +1,47 @@
 package io.vanillabp.cockpit.tasklist.api.v1;
 
-import java.time.OffsetDateTime;
-import java.util.List;
-
-import org.mapstruct.Mapper;
-import org.mapstruct.Mapping;
-
 import io.vanillabp.cockpit.commons.mapstruct.NoMappingMethod;
 import io.vanillabp.cockpit.gui.api.v1.UserTask;
 import io.vanillabp.cockpit.util.microserviceproxy.MicroserviceProxyRegistry;
+import org.mapstruct.Mapper;
+import org.mapstruct.Mapping;
+
+import java.time.OffsetDateTime;
+import java.util.List;
 
 @Mapper(implementationName = "TasklistGuiApiMapperImpl")
 public abstract class GuiApiMapper {
 
     @Mapping(target = "uiUri", expression = "java(proxiedUiUri(userTask))")
     @Mapping(target = "dueDate", expression = "java(mapDateTimeMaxToNull(userTask))")
-    @Mapping(target = "taskProviderUri", expression = "java(proxiedTaskProviderUri(userTask))")
+    @Mapping(target = "workflowModuleUri", expression = "java(proxiedWorkflowModuleUri(userTask))")
 	public abstract UserTask toApi(
 			io.vanillabp.cockpit.tasklist.model.UserTask userTask);
 
     public abstract List<UserTask> toApi(
 			List<io.vanillabp.cockpit.tasklist.model.UserTask> userTasks);
-	
+
     @NoMappingMethod
-	protected String proxiedUiUri(
-	        final io.vanillabp.cockpit.tasklist.model.UserTask userTask) {
-	    
+    protected String proxiedUiUri(
+            final io.vanillabp.cockpit.tasklist.model.UserTask userTask) {
+        
         if (userTask.getWorkflowModuleUri() == null) {
             return null;
         }
-	    if (userTask.getUiUriPath() == null) {
-	        return null;
-	    }
-	    
-	    return MicroserviceProxyRegistry.WORKFLOW_MODULES_PATH_PREFIX
-	            + userTask.getWorkflowModule()
-	            + (userTask.getUiUriPath().startsWith("/")
-	                    ? userTask.getUiUriPath()
+        if (userTask.getUiUriPath() == null) {
+            return null;
+        }
+        
+        return MicroserviceProxyRegistry.WORKFLOW_MODULES_PATH_PREFIX
+                + userTask.getWorkflowModule()
+                + (userTask.getUiUriPath().startsWith("/")
+                        ? userTask.getUiUriPath()
                         : "/" + userTask.getUiUriPath());
-	    
-	}
+        
+    }
 
     @NoMappingMethod
-    protected String proxiedTaskProviderUri(
+    protected String proxiedWorkflowModuleUri(
             final io.vanillabp.cockpit.tasklist.model.UserTask userTask) {
         
         if (userTask.getWorkflowModuleUri() == null) {
@@ -64,5 +63,5 @@ public abstract class GuiApiMapper {
 
         return userTask.getDueDate();
     }
-
+    
 }
