# react-shared/src/types/BcUserTask.ts
@@ -1,0 +1,9 @@
+import { UserTask } from "@vanillabp/bc-official-gui-client";
+
+export type OpenUserTaskFunction = () => void;
+
+export interface BcUserTask extends UserTask {
+  
+  open: OpenUserTaskFunction;
+  
+};
